--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,29 @@
-<h1>Hola angular, cómo estás?</h1>
-<button class="theme-changed">nada</button>
-<!-- <router-outlet /> -->
+<div class="general-container">
+    <div>
+        <nav class="navbar">
+            <span class="">Navbar</span>
+          </nav>
+    </div>
+    <div class="container">
+        <div class="name">
+            <h1>Hola Mundo, soy Lizani</h1>
+        </div>
+        <div class="container-image">
+            <div class="image">
+                <!-- <img src="../assets/1.jpg" alt=""> -->
+            </div>
+        </div>
+        <div class="text-container">
+            <span>Morbi ultrices arcu a ex interdum vehicula. Sed pharetra dignissim interdum. 
+                Nulla id pretium velit. Integer egestas dapibus nulla a placerat. Duis vel ullamcorper purus.
+                Praesent quis sem metus. Nunc iaculis tempor faucibus. Vestibulum at pellentesque erat. 
+                Suspendisse potenti. Praesent nec dui sit amet leo tempor finibus sed quis augue. Nunc tempor dolor sed dolor hendrerit,
+                ac venenatis dolor porta. Nullam in enim risus.
+                Donec cursus auctor vulputate. Phasellus sollicitudin id purus quis suscipit. Donec in egestas est. 
+                Vivamus consectetur arcu eu mauris blandit, in rutrum augue varius. Nam fringilla lorem ac elit tempus egestas.
+            </span>
+        </div>
+    </div>
+    <app-skills/>
+</div>
+<router-outlet />
