--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,42 @@
-h1{
+.general-container{
+    background-color: #fff;
+    height: 100% !important;
+}
+
+.navbar{
+    background-color: #ECC9C8;
+    height: 4rem;
+    width: 100%;
+}
+
+.name{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+}
+
+.name h1{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color:aqua;
+    color:rgb(0, 0, 0);
+    font-size: 2rem;
+    font-weight: 400;
+}
+
+.container-image{
+    margin: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.image{
+    background-image: url("../assets/1.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 20rem;
+    height: 20rem;
+    border-radius: 50%;
+    margin-top: 1rem;
 }
