--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         </div>
         <div class="container-image">
             <div class="image">
-                <!-- <img src="../assets/1.jpg" alt=""> -->
+                <!-- <img src="../assets/images/1.jpg" alt=""> -->
             </div>
         </div>
         <div class="text-container">
