--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,19 +1,19 @@
-<div class="container">
-    <div class="card">
-        <div class="face face1">
-            <div class="content">
+<div class="container w-100" 
+    style="background-color: blueviolet; height: 15rem; display: flex; justify-content: center; align-items: center;">
+    <div class="card" style="background-color: aqua; width: 20rem; display:flex; justify-content: center; align-items: center;">
+        <div class="face face1" style="background-color: chartreuse; width: 19rem; height: 100px; ">
+            <div class="content" style="background-color:thistle; width: 100%; display:flex; justify-content: center; align-items: center;">
                 <div class="icon">
-                    <link type="image/png" sizes="16x16" rel="icon" href=".../icons8-angular-ios7-16.png">
+                    <img src="../../assets/icons/icons8-angular.svg" alt="Icono" width="50" height="50">
                 </div>
-                <span>este es otro componente</span>
             </div>
         </div>
-        <div class="face face2">
-            <div class="content">
+        <div class="face face2" style="background-color: yellow; width: 19rem; display: flex; justify-content: center; align-items: center;">
+            <div class="content" style="background-color: tomato; width: 19rem; display:flex; height: auto; justify-content: center; align-items: center">
                 <h3>
                     <a href="#" target="_blank">Card</a>
                 </h3>
-                <span>Esta es la card para angular</span>
+                <p>ksjdklsks ks dskiksf ksdkjsjf sdsk sd</p>
             </div>
         </div>
     </div>
