--- a/src/app/skills/skills.component.css
+++ b/src/app/skills/skills.component.css
@@ -1,34 +1,35 @@
-.container .card .face .face1{
-    position:relative;
-    background: #A5A4B5;
+.container > .card > .face.face1{
+    position: relative;
+    background-color: #333;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 1;
     transform: translateY(100px);
-}
+    }
 
-.container .card:hover .face .face1{
-    background: #A5A4B5;
-    transform: translateY(0px);
-}
+    .container > .card:hover > .face.face1 {
+        background-color: #ff0057;
+        transform: translateY(0px);
+    }
 
-.container .card .face .face1 .content{
-    max-width: 100px;
-}
+    .container > .card > .face.face1 > .content {
+        max-width: 100px;
+    }
 
-.container .card .face .face2{
-    position: relative;
-    background-color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    box-sizing: border-box;
-    box-shadow: 0, 20px, 50px rgb(0, 0, 0, 0.8);
-    transform: translate(-120px);
-}
+    .container > .card > .face.face2 {
+        position:relative;
+        background: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+        box-sizing: border-box;
+        box-shadow: 0 20px 50px rgb(0, 0, 0, 0.8);
+        transform: translateY(-100px);
+    }
 
-.container .card:hover .face .face2{
-    transform: translateY(0);
-}
+    .container > .card:hover > .face.face2{
+        transform: translateY(0px);
+    }
+
