cards finalizadas y animaciones

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,9 @@
                 Vivamus consectetur arcu eu mauris blandit, in rutrum augue varius. Nam fringilla lorem ac elit tempus egestas.
             </span>
         </div>
+        <div class="button-container">
+            <button>Descarga mi CV</button>
+        </div>
     </div>
     <app-skills/>
 </div>
