--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -30,6 +30,7 @@
     align-items: center;
 }
 
+
 .image{
     background-image: url("../assets/images/1.jpg");
     background-size: cover;
@@ -39,4 +40,38 @@
     height: 20rem;
     border-radius: 50%;
     margin-top: 1rem;
+    transition: 0.5s ease;
+}
+
+.image:hover{
+    transform: scale(1.1);
+}
+
+.button-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1rem;
+    margin-top: 3rem;
+}
+button{
+    border: none;
+    border-radius: 5px;
+    background-color: #ECC9C8;
+    height: 2.5rem;
+    width: 12rem;
+    color: #fff;
+    font-weight: bold;
+}
+
+button:hover{
+    background-color: #D89486;
+}
+
+.text-container{
+    color: #000;
+    font-weight: 400;
+    margin-top: 2rem;
+    text-align: justify;
+    padding-top: 1rem;
 }
