--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,5 @@
 <div class="general-container">
-    <div>
-        <nav class="navbar">
-            <span class="">Navbar</span>
-          </nav>
-    </div>
-    <div class="container">
+    <div class="container" id="sobreMi">
         <div class="name">
             <h1>Hola Mundo, soy Lizani</h1>
         </div>
@@ -28,5 +23,6 @@
         </div>
     </div>
     <app-skills/>
+    <app-proyects/>
 </div>
 <router-outlet />
