--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,11 +3,7 @@
     height: 100% !important;
 }
 
-.navbar{
-    background-color: #ECC9C8;
-    height: 4rem;
-    width: 100%;
-}
+
 
 .name{
     display: flex;
@@ -45,6 +41,7 @@
 
 .image:hover{
     transform: scale(1.1);
+    cursor: pointer;
 }
 
 .button-container{
@@ -66,6 +63,7 @@ button{
 
 button:hover{
     background-color: #D89486;
+    cursor: pointer;
 }
 
 .text-container{
