--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,4 +1,4 @@
-<div class="container w-100" 
+<div class="container w-100" id="habilidades"
     style="height: 15rem; display: flex; justify-content: space-between; align-items: center; ">
     <div class="card" style="width: 20rem; display:flex; justify-content: center; align-items: center; border:none;">
         <div class="face face1" style="width: 19rem; height: 100px; background-color: #D89486;">
