--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,50 @@
 /* You can add global styles to this file, and also import other style files */
 :root{
     /* color-scheme: dark ligth; */
+    scroll-behavior: smooth;
 }
 body{
     font-family: 'Courier New', Courier, monospace;
     margin: 0;
+    padding-top: 60px; 
+    width: 100%;
+}
+
+.navbar{
+    background-color: #ECC9C8;
+    height: 4rem;
+    width: 100%;
+    justify-content: end;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+}
+
+.navbar-list{
+    display: flex;
+    margin: 0;
+}
+
+.navbar-link{
+    margin: 0 3rem;
+    text-decoration: none;
+    list-style: none;
+}
+.navbar-link a{
+    color: #fff;
+    font-weight: bold;
+    font-size: 1rem;
+}
+
+.navbar-link a:hover{
+    text-decoration: none;
+}
+
+footer{
+    background-color: #ECC9C8;
+    height: 8rem;
+}
+
+.footer-style{
+    display: flex;
 }
